<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:checkable="false"
        android:enabled="false"
        android:title="@string/app_name">

        <menu>
            <group
                android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_contacts"
                    android:icon="@drawable/ic_contacts_24dp"
                    android:title="@string/menu_contacts">
                </item>
            </group>
            <group
                android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_message"
                    android:icon="@drawable/ic_chat_24dp"
                    android:title="@string/menu_chats">
                </item>
            </group>
            <group
                android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_load"
                    android:icon="@drawable/ic_load_24dp"
                    android:title="@string/menu_load">
                </item>
            </group>
            <group
                android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_news"
                    android:icon="@drawable/ic_fiber_new"
                    android:title="@string/menu_news">
                </item>
            </group>
            <group
                android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_library"
                    android:icon="@drawable/ic_library_24dp"
                    android:title="@string/menu_library">
                </item>
            </group>
            <group
                android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_profile"
                    android:icon="@drawable/ic_profile_24dp"
                    android:title="@string/menu_profile">
                </item>
            </group>
        </menu>

        <group
            android:checkableBehavior="none">
            <item
                android:id="@+id/nav_settings"
                android:title="@string/menu_settings">
            </item>
        </group>
        <group
            android:checkableBehavior="none">
            <item
                android:id="@+id/nav_exit"
                android:title="@string/menu_exit">
            </item>
        </group>

    </item>
</menu>